--- a/docs/templates/nav.html
+++ b/docs/templates/nav.html
@@ -3,6 +3,11 @@
         <div class="vertical-menu">
             <a href="index.html">Home Page</a>
             <a href="part1.html">Part 1: The Basics</a>
+            <a href="part2.html">Part 2: Sign Commands</a>
+            <a href="part3.html">Part 3: Economy</a>
+            <a href="part4.html">Part 4: Configuration</a>
+            <a href="part5.html">Part 5: Races (coming soon)</a>
+            <a href="part6.html">Part 6: Other plugin support</a>
         </div>
     </div>
 </header>
