--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -40,6 +40,7 @@ img {
     padding: 0;
     vertical-align: middle;
     text-align: center;
+    cursor: pointer;
 }
 
 .img-thumbnail {
@@ -53,7 +54,7 @@ img {
     padding: 0;
     vertical-align: text-bottom;
     text-align: center;
-    width: 80px;
+    width: 55px;
 }
 
 /* Fixed width view */
