--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,7 +1,14 @@
 
 /* Headings */
+h1, .h1 {
+    font-size: 2.3rem;
+}
+
+h2, .h2 {
+    font-size: 2rem;
+}
+
 h1, h2, h3, h4 {
-    font-family: 'Arvo', serif;
     display: block;
     border-bottom: 1px solid #ccc;
     padding-bottom: 5px;
