--- a/docs/templates/nav.html
+++ b/docs/templates/nav.html
@@ -1,13 +1,23 @@
-<header>
-    <div class="navigation">
-        <div class="vertical-menu">
-            <a href="index.html">Home Page</a>
-            <a href="part1.html">Part 1: The Basics</a>
-            <a href="part2.html">Part 2: Sign Commands</a>
-            <a href="part3.html">Part 3: Economy</a>
-            <a href="part4.html">Part 4: Configuration</a>
-            <a href="part5.html">Part 5: Races (coming soon)</a>
-            <a href="part6.html">Part 6: Other plugin support</a>
-        </div>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-left">
+    <a class="navbar-brand" href="index.html">Carz Tutorials</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#tutorials-list" aria-controls="tutorials-list" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="tutorials-list">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <!-- nav items get dynamically added -->
+        </ul>
+
+        <script>
+            let links = ["The Basics", "Sign Commands", "Economy", "Plugin Configuration", "Races", "Other Plugin Support"];
+            for (let i = 0; i < links.length; i++) {
+                let link = links[i];
+                $(".navbar-nav").append(`<li class="nav-item"><a class="nav-link" href="part${i + 1}.html">Part ${i + 1}: ${link}</a></li>`);
+            }
+        </script>
     </div>
-</header>
+</nav>
