Documentation update Small fixes

--- a/docs/templates/nav.html
+++ b/docs/templates/nav.html
@@ -13,7 +13,7 @@
         </ul>
 
         <script>
-            let links = ["The Basics", "Sign Commands", "Block Types", "Economy", "Plugin Configuration", "Races", "Other Plugin Support"];
+            let links = ["The Basics", "Sign Commands", "Block Types", "Economy", "Plugin Configuration", "Races", "Other Plugin Support", "Developer Tutorials"];
             for (let i = 0; i < links.length; i++) {
                 let link = links[i];
                 $(".navbar-nav").append(`<li class="nav-item"><a class="nav-link" href="part${i + 1}.html">Part ${i + 1}: ${link}</a></li>`);
