Tidy up docs, added analytics

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -19,10 +19,6 @@
     color: #fff;
 }
 
-.content {
-    padding-bottom: 40px;
-}
-
 /* Headings */
 h1, .h1 {
     font-size: 2.3rem;
@@ -55,6 +51,18 @@ p {
 
 li > ul > li {
     margin-bottom: 10px;
+}
+
+#contents-placeholder {
+    font-size: 1rem;
+}
+
+.list-group-item-action {
+    color: #2C3E50 !important;
+}
+
+.list-group-item {
+    padding: 0.5rem 2rem;
 }
 
 a {
