Carz 7.2 * Added "/carz list (blockType)" * Added "/carz give (player)" * Added "/carz help [command]" * Added support for 1.12+ (with a few limitations) * Various fixes

--- a/docs/templates/nav.html
+++ b/docs/templates/nav.html
@@ -13,7 +13,7 @@
         </ul>
 
         <script>
-            let links = ["The Basics", "Sign Commands", "Block Types", "Economy", "Plugin Configuration", "Races", "Other Plugin Support", "Developer Tutorials"];
+            let links = ["The Basics", "Sign Commands", "Block Types", "Economy", "Plugin Configuration", "Other Plugin Support", "Developer Tutorials"];
             for (let i = 0; i < links.length; i++) {
                 let link = links[i];
                 let pathName = window.location.pathname;
